fix codesmell